src/plugins/kibana/public/settings/sections/add_data/styles/_add_data.less
@import (reference) "~ui/styles/variables";
@import (reference) "~ui/styles/mixins";
@import (reference) "~ui/styles/theme";

list-of-values {
  .value-list-item {
    display: flex;
  }
}

kbn-settings-add-data {
  @vis-editor-sidebar-basis: (100/12) * 2%; // two of twelve columns
  @vis-editor-sidebar-min-width: 350px;
  @vis-editor-nesting-width: 8px;
  @vis-editor-agg-editor-spacing: 5px;
  @padding-base-vertical: 5px;

  pipeline-output {
    display: block;

    .header-line {
      display: flex;

      label {
        width: 100%;
      }
    }

    pre {
      min-height: 100px;
    }

    pre.collapsed {
      max-height: 100px;
    }
  }

  label {
    margin-bottom: 0px;
  }

  source-data-new {
    button {
      width: 40px;
      margin-left: 5px;
    }

    div.controls {
      display: flex;
    }
  }

  div.input-output {
    display: flex;

    &>div {
      display: inline-block;
      width:50%;

      textarea {
        max-height: 125px;
        min-height: 125px;
      }

      pre {
        width: 100%;
        max-height: 125px;
        min-height: 125px;
      }
    }
  }

  ul {
    list-style-type: none;
    padding: 0px;
  }

  ul.pipeline-container {
    &>li {
      border: 1px solid #ccc;
    }
  }

  .empty-pipeline {
    border: 1px solid #ccc;
    padding: 5px;

    p {
      font-size: 15px;
    }
  }

  process-container {
    display: block;
    margin-bottom: 1px;

    .processor_body {
      display: block;
      overflow: hidden;
      position: relative;

      .overlay {
        // TODO: Figure out the best way to disable/gray out the processor
        display: none;
        position: absolute;

        top: -5000px;
        left: -5000px;
        width: 10000px;
        height: 10000px;
        background-color: black;
        opacity: .10;
      }

      &.dirty {
        .overlay {
          display: block;
        }
      }
    }

    .process-container-content {
      padding: @padding-base-vertical;
    }

    label {
      margin-bottom: 0px;
    }

    .form-group {
      margin-bottom: @padding-base-vertical;
    }

    process-container-header {
      .process-container-header {
        display: flex;
        align-items: center;
        flex: 1 0 auto;
        background-color: #DDD;
        border-bottom: 1px solid #CCC;

        &-toggle {
          flex: 0 0 auto;
          margin-right: @vis-editor-agg-editor-spacing;
        }

        &-title {
          flex: 1 1 auto;
          .ellipsis();
          font-weight: bold;

          .processor-title {
            width: 100%;
          }

          .processor-description {
            font-weight: normal;
          }

          .processor-description.danger {
            font-weight: bold;
            color: @brand-danger;
          }
        }

        &-controls {
          flex: 0 0 auto;
        }
      }
    }

    output-preview {
      .visual {
        background-color: #ecf0f1;
        border: 1px solid #ccc;
      }

      .visual.collapsed {
        max-height: 125px;
        overflow-y: scroll;
      }

      pre {
        background-color: transparent;
        border: none;
      }

      .hide-unchanged {
        .jsondiffpatch-unchanged {
          display: none;
        }
      }
    }

    .custom-date-format {
      display: flex;
    }

  }


}

